<resources>
    <string name="app_name">E棉仓</string>
    <string name="action_settings">Settings</string>
    <string name="finish_toast">再次点击退出</string>


    <string name="main_text_home">首页</string>
    <string name="main_text_discover">附近</string>
    <string name="main_text_scan">扫棉包</string>
    <string name="main_text_store">货架</string>
    <string name="main_text_userinfor">我的</string>

    <string name="show_login_hint">未登录状态，没有权限查看该内容，是否选择登录？</string>
    <string name="phone_connection">400-882-5779</string>
    <string name="phone_cooperation">13810229671</string>

    <string name="num_only_digits">0123456789</string>
    <string name="num_and_point_digits">0123456789.</string>

    <!-- 二维码扫描 -->

    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
    <string name="title_activity_sao_mao">SaoMaoActivity</string>

    <color name="line_color">#cccccc</color>
    <color name="edittext_line_color">#000000</color>
    <string name="title_activity_jump_to">JumpToActivity</string>

    <string name="app_id">5864c95c</string>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

</resources>
