<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="2px"
        android:layout_above="@+id/rl_bar_view"
        android:background="@color/c5"
        android:visibility="gone"
        />
    <FrameLayout
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_marginBottom="70px"
        android:paddingBottom="50px"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"/>

    <RelativeLayout
        android:id="@+id/rl_bar_view"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/background_main_down"
        >
    <LinearLayout
        android:id="@+id/bottom_bar_view"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:paddingLeft="@dimen/main_menu_paddingleft"
        android:paddingRight="@dimen/main_menu_paddingleft"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/btn_main_home"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text5"
            android:textColor="@color/c6"
            android:drawablePadding="@dimen/main_menu_drawablePadding"
            android:gravity="center"
            android:text="@string/main_text_home"
            android:drawableTop="@drawable/main_menu_home_selector">
        </TextView>
        <TextView
            android:id="@+id/btn_main_discover"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text5"
            android:textColor="@color/c6"
            android:drawablePadding="@dimen/main_menu_drawablePadding"
            android:gravity="center"
            android:text="@string/main_text_discover"
            android:drawableTop="@drawable/main_menu_discover_selector">
        </TextView>

        <TextView
            android:id="@+id/btn_main_publish"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text5"
            android:textColor="@color/c6"
            android:drawablePadding="@dimen/main_menu_drawablePadding"
            android:gravity="center"
            android:text="@string/main_text_scan"
            android:drawableTop="@drawable/main_menu_publish_selector">
        </TextView>

        <TextView
            android:id="@+id/btn_main_store"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text5"
            android:drawablePadding="@dimen/main_menu_drawablePadding"
            android:textColor="@color/c6"
            android:gravity="center"
            android:text="@string/main_text_store"
            android:drawableTop="@drawable/main_menu_store_selector">
        </TextView>
        <TextView
            android:id="@+id/btn_main_userinfor"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Text5"
            android:textColor="@color/c6"
            android:drawablePadding="@dimen/main_menu_drawablePadding"
            android:gravity="center"
            android:text="@string/main_text_userinfor"
            android:drawableTop="@drawable/main_menu_userinfo_selector">
        </TextView>
    </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
